# CampusBridge

./: README.md
server/: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
server/scripts/: create_db.py
server/scripts/dev/: server.py
server/src/campus_bridge/alembic/: env.py
server/src/campus_bridge/alembic/versions/: d8d93b97e0e9_initial_migration.py
server/src/campus_bridge/api/v1/: app.py  dependencies.py
server/src/campus_bridge/api/v1/routes/: __init__.py  health_check.py
server/src/campus_bridge/config/: lifespan.py  logging.py
server/src/campus_bridge/config/settings/: __init__.py  app.py
server/src/campus_bridge/constants/: branch_contants.py  config_constants.py  post_contstant.py  reaction_contstant.py  role_constants.py  state_constants.py
server/src/campus_bridge/core/: security.py
server/src/campus_bridge/data/database/: base.py  core.py  mixins.py  session.py
server/src/campus_bridge/data/enums/: branch.py  config.py  post.py  reaction.py  role.py  state.py
server/src/campus_bridge/data/models/: __init__.py  alumni.py  college.py  college_official.py  comment.py  email_verification.py  post.py  post_reaction.py  student.py  user.py
server/src/campus_bridge/data/schemas/: alumni.py  auth.py  college.py  feed.py  student.py  user.py
server/src/campus_bridge/errors/decorators/: sqlalchemy.py
server/src/campus_bridge/errors/exc/: __init__.py  base_errors.py
server/src/campus_bridge/modules/alumni/repository/: alumni_repository.py
server/src/campus_bridge/modules/alumni/router/: alumni_router.py
server/src/campus_bridge/modules/alumni/service/: alumni_service.py
server/src/campus_bridge/modules/auth/repository/: auth.py
server/src/campus_bridge/modules/auth/router/: auth.py
server/src/campus_bridge/modules/auth/service/: auth.py
server/src/campus_bridge/modules/college/repository/: college_repository.py
server/src/campus_bridge/modules/college/router/: college_router.py
server/src/campus_bridge/modules/college/service/: college_service.py
server/src/campus_bridge/modules/feed/repository/: feed_repository.py
server/src/campus_bridge/modules/feed/router/: feed_router.py
server/src/campus_bridge/modules/feed/service/: feed_service.py
server/src/campus_bridge/utils/: cursor_pagination.py  db_object.py  uuid.py
(+6 files in other folders)
