[project]
name = "campus-bridge"
version = "0.1.0"
description = "Campus Bridge API Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi-injectable>=0.1.0",
    "sqlalchemy[asyncio]>=2.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/campus_bridge"]

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.0",
    "python-lsp-black>=2.0.0",
    "python-lsp-server>=1.14.0",
]
